# minimal-alpine-haskell-beanstalk

./: .gitignore  ChangeLog.md  Dockerfile  README.md  TODO.md  Test.cabal  build.sh  run.sh
cabal-project/: Config.json  LICENSE  TODO.md  Test.cabal
cabal-project.old/: README.md
cabal-project/sql/: db.sql
cabal-project/src/: Config.hs  Main.hs
deploy/: Dockerfile
docker-deploy/: Dockerrun.aws.json
docker/deploy/: Dockerfile
src/: Config.hs  Main.hs  Person.hs
static/: index.html
tools/: bash.sh  build-sandbox.sh  delete-images.sh  discover-ip.sh  run-deploy.sh
