
name:                 Test
version:              0.1.0.0
-- synopsis:            
-- description:         
license:              BSD3
license-file:         LICENSE
author:               julian1
maintainer:           mail@julian1.io
-- copyright:           
-- category:            
build-type:           Simple
extra-source-files:   ChangeLog.md
cabal-version:        >=1.10


executable Main
  main-is:            Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:      base >=4.9 && <4.10, 
                      warp >= 3.2.18, wai, http-types, bytestring,
                      aeson >= 1.3.0

 
  hs-source-dirs:     src
  default-language:   Haskell2010


